# zyro

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  project-structure.md  pyproject.toml
.devcontainer/: docker-compose.yaml
zyro/: cli.py
zyro/core/: executor.py  parser.py  router.py
zyro/engine/: fastapi_engine.py
zyro/static/: intro.html
