[project]
name = "zyro"
version = "0.1.0"
description = "A zero-code backend orchestrator that turns a YAML config into a fully functional, deployable API — no code, just config."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "M. Sanjay Uddith Raju", email = "uddithmachiraju@gmail.com" },
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "httpx>=0.30.0",
]

[tool.poetry.scripts]
zyro = "zyro.cli:main" 

[project.backend]
name = "uvicorn"
args = ["--host", "0.0.0.0", "--port", "8000"] 
entry-points = [
    "serve = zyro:app",
]
