[project]
name = "zyro"
version = "0.6.0"
description = "A zero-code backend orchestrator that turns a YAML config into a fully functional, deployable API — no code, just config."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "M. Sanjay Uddith Raju", email = "uddithmachiraju@gmail.com" }
]

dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
  "pyyaml>=6.0.2",
  "httpx>=0.28.1"
]

[project.scripts]
zyro = "zyro.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zyro*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# [project.backend]
# name = "uvicorn"
# args = ["--host", "0.0.0.0", "--port", "8000"]
# entry-points = ["serve = zyro:app"]